--- a/frontend/src/pages/adminDashboard/adminSidebarRoutes/manageBooks/manageBooks.css
+++ b/frontend/src/pages/adminDashboard/adminSidebarRoutes/manageBooks/manageBooks.css
@@ -13,6 +13,8 @@
     height: 80px;
     width: 100%;
     display: flex;
+    flex-direction: row;
+    gap: 50px;
     align-items: center;
     justify-content: center;
 }
@@ -30,6 +32,24 @@
 }
 
 .add-book-btn:hover {
+  background-color: #fca311;
+  transform: translateY(-6px);
+}
+
+
+.view-book-btn {
+  background-color: #03045e;
+  color: white;
+  font-weight: 600;
+  font-size: 16px;
+  border: none;
+  border-radius: 0 11px;
+  padding: 11px 22px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.view-book-btn:hover {
   background-color: #fca311;
   transform: translateY(-6px);
 }
