--- a/frontend/src/pages/about/about.css
+++ b/frontend/src/pages/about/about.css
@@ -4,6 +4,75 @@
   font-family: 'Segoe UI', sans-serif;
 }
 
+.about-page-top-part {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 73vh;
+  background: #f0f4ff;
+  padding: 40px 20px;
+  position: relative;
+  overflow: hidden;
+}
+
+.top-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1200px;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.text-block {
+  flex: 1;
+  max-width: 600px;
+  margin-left: 100px;
+}
+
+.text-block h1 {
+  font-size: 40px;
+  color: #fca311;
+  margin-bottom: 8px;
+  font-family: 'Cinzel', serif;
+}
+
+.text-block h2 {
+  font-size: 60px;
+  color: #03045e;
+  margin-bottom: 12px;
+  font-weight: 600;
+  font-family: 'Cinzel', serif;
+}
+
+.text-block p {
+  font-size: 18px;
+  color: #333;
+}
+
+.image-block {
+  flex: 1;
+  min-width: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-us-image {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.home-ball {
+  position: absolute;
+  top: 10%;
+  width: 100px;
+  animation: float 3s ease-in-out infinite;
+  filter: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.2));
+}
+
 .section-title {
   font-size: 2.5rem;
   font-weight: 800;
