--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -15,14 +15,12 @@
 
 .home-image {
   position: absolute;
-  top: 0;
-  right: 60px;
-  height: 444px;
-  width: 444px;
+  top: 60px;
+  right: 20px;
+  width: 42%;
   transition: all 0.9s ease-in-out;
 }
   
-
 .home-ball {
   position: absolute;
   top: 11%;
@@ -51,7 +49,6 @@
   z-index: 2;
   width: 60%;
   padding: 80px 20px 50px;
-  margin-left: 60px;
   opacity: 0;
   transform: scale(0.8);
   transition: all 0.9s ease-in-out;
