--- a/frontend/src/pages/adminDashboard/adminSidebarRoutes/manageUsers/ManageUsers.css
+++ b/frontend/src/pages/adminDashboard/adminSidebarRoutes/manageUsers/ManageUsers.css
@@ -97,3 +97,17 @@
 .btn.unblock:hover {
   background-color: #218838;
 }
+.search-bar {
+  margin-bottom: 20px;
+  margin-top: -30px;
+}
+.search-bar input {
+  padding: 8px 12px;
+  border: 2px solid #0056b3;
+  width: 300px;
+  font-size: 14px;
+  margin-left: 700px;
+  /* margin-top:0px; */
+  border-radius: 4px;
+  /* border: 1px solid #ccc; */
+}
