--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -1,5 +1,4 @@
 /* HEADER CONTAINER */
-
 .header {
   position: relative;
   display: flex;
@@ -8,11 +7,11 @@
   width: 100%;
   height: 100px;
   background-color: #f0f4ff;
-  border-bottom: 1px solid #03045E
+  border-bottom: 1px solid #cdceff;
 }
 
-/* LEFT SECTION */
 
+/* LEFT SECTION */
 .maimtLogo {
   position: absolute;
   height: 80px;
@@ -41,7 +40,6 @@
 
 
 /* CONTACT INFO SECTION */
-
 .contact-info {
   position: absolute;
   display: flex;
@@ -83,7 +81,6 @@
 
 
 /* RIGHT SECTION */
-
 .bookmark-ribbon {
   position: absolute;
   right: 0;
@@ -123,7 +120,6 @@
 
 
 /* RESPONSIVENESS */
-
 @media (max-width: 768px) {
 
   .header {
