--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -7,7 +7,7 @@
 }
 
 .home-top-part {
-  background-color: #f0f4ff;
+  background: linear-gradient(135deg, #fce4ec, #e1f5fe);
   width: 100%;
   height: 73vh;
   margin-bottom: 0;
