--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -3,7 +3,7 @@
   color: #03045E;
   font-family: 'Poppins', sans-serif;
   padding: 22px 20px 1px;
-  border-top: 1px solid #03045E;
+  border-top: 1px solid #cdceff;
   box-shadow: 0 -2px 10px rgba(0,0,0,0.05);
 }
 
